add galaxy swagger
